--- a/css/styles-index.css
+++ b/css/styles-index.css
@@ -1,11 +1,133 @@
-#img-logo {
-  margin: 40 0 0 84;
+html {
+  height: 100%;
 }
+
+body {
+  height: 100%;
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(109, 113, 13, 1) 100%
+  );
+}
+
+#img-logo {
+  margin: 40px 0px 0px 84px;
+  height: 48px;
+}
+
+main {
+  display: flex;
+  height: 100%;
+}
+
+/* Seccion Input */
 
 #section-input {
   width: 66%;
+  height: 100%;
 }
 
+#panel-input-text {
+  text-align: center;
+  opacity: 0.4;
+}
+
+#input-text {
+  position: relative;
+  margin-top: 40px;
+  width: 577px;
+  height: 275px;
+}
+
+#panel-codificacion {
+  margin: 30px;
+}
+
+#info {
+  color: antiquewhite;
+  width: 577px;
+  margin: 0 auto;
+}
+
+#actions {
+  text-align: center;
+  width: 100%;
+}
+
+.action-button {
+  width: 328px;
+  height: 67px;
+  margin-top: 15px;
+
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 16px;
+  color: white;
+  background: #0a3871;
+  border-radius: 24px;
+}
+
+.action-button:hover {
+  color: white;
+  background-color: black;
+}
+
+/* Seccion Output */
+
 #section-output {
-  width: 33%;
+  width: 34%;
+  margin: 40px 40px 40px 40px;
+  text-align: center;
+  background: #aaa00030;
+  border-radius: 15px;
+}
+
+#output-text {
+  opacity: 0.5;
+}
+
+#salida-vacia {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+#img-muñeco {
+  display: block;
+  width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+}
+
+#info-muñeco-1 {
+  display: block;
+  font-family: "Inter";
+  font-style: normal;
+  color: antiquewhite;
+  font-weight: bold;
+  font-size: 22px;
+  text-align: center;
+  margin-top: 80px;
+}
+
+#info-muñeco-2 {
+  display: block;
+  font-family: "Inter";
+  font-style: normal;
+  color: bisque;
+  font-size: 15px;
+  text-align: center;
+  margin-top: 15px;
+}
+
+#output-text {
+  width: 95%;
+  margin-top: 25px;
+  height: 350px;
+}
+
+#action-copy {
+  margin-top: 30px;
 }
