--- a/css/styles-index.css
+++ b/css/styles-index.css
@@ -1,14 +1,12 @@
 html {
   height: 100%;
+  width: 100%;
 }
 
 body {
+  width: 100%;
   height: 100%;
-  background: linear-gradient(
-    0deg,
-    rgba(0, 0, 0, 1) 0%,
-    rgba(109, 113, 13, 1) 100%
-  );
+  background-color: #0a3871;
 }
 
 #img-logo {
@@ -17,26 +15,32 @@ body {
 }
 
 main {
-  display: flex;
+  width: 100%;
   height: 100%;
+  display: flex;
 }
 
 /* Seccion Input */
 
 #section-input {
+  background-color: gray;
   width: 66%;
-  height: 100%;
+  background-image: url("/img/fondo-entrada.jpg");
 }
 
 #panel-input-text {
+  margin-top: 25px;
   text-align: center;
   opacity: 0.4;
 }
 
 #input-text {
+  /*
   position: relative;
   margin-top: 40px;
-  width: 577px;
+  */
+  /*margin: 10px 10px 10px;*/
+  width: 90%;
   height: 275px;
 }
 
@@ -46,7 +50,7 @@ main {
 
 #info {
   color: antiquewhite;
-  width: 577px;
+  width: 300px;
   margin: 0 auto;
 }
 
@@ -77,28 +81,36 @@ main {
 
 #section-output {
   width: 34%;
-  margin: 40px 40px 40px 40px;
   text-align: center;
-  background: #aaa00030;
-  border-radius: 15px;
+  background-image: url("/img/fondo-salida.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 25%;
+  /*margin: 40px 40px 40px 40px;*/
+  /*border-radius: 15px;*/
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #output-text {
   opacity: 0.5;
+  width: 95%;
+  margin-top: 25px;
+  height: 350px;
 }
 
 #salida-vacia {
   width: 100%;
-  height: 100%;
+  /*height: 100%;*/
   display: block;
 }
 
 #img-muñeco {
   display: block;
-  width: 300px;
+  width: 250px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 40px;
 }
 
 #info-muñeco-1 {
@@ -122,12 +134,54 @@ main {
   margin-top: 15px;
 }
 
-#output-text {
-  width: 95%;
-  margin-top: 25px;
-  height: 350px;
-}
-
 #action-copy {
   margin-top: 30px;
+}
+
+/* Configuracion responsiva */
+
+/* TABLET */
+
+@media screen and (max-width: 720px) {
+  main {
+    display: grid;
+    /*height: 100%;*/
+  }
+
+  #section-input {
+    background-color: green;
+    width: 100%;
+  }
+
+  #section-output {
+    width: 100%;
+    height: 500px;
+  }
+
+  #output-text {
+    height: 250px;
+  }
+}
+
+/* CELULAR */
+
+@media screen and (max-width: 450px) {
+  main {
+    display: grid;
+    /*height: 100%;*/
+  }
+
+  #section-input {
+    background-color: royalblue;
+    width: 100%;
+  }
+
+  #section-output {
+    width: 100%;
+    height: 400px;
+  }
+
+  #output-text {
+    height: 150px;
+  }
 }
