--- a/css/styles-index.css
+++ b/css/styles-index.css
@@ -25,7 +25,7 @@ main {
 #section-input {
   background-color: gray;
   width: 66%;
-  background-image: url("/img/fondo-entrada.jpg");
+  background-image: url("../img/fondo-entrada.jpg");
 }
 
 #panel-input-text {
@@ -82,7 +82,7 @@ main {
 #section-output {
   width: 34%;
   text-align: center;
-  background-image: url("/img/fondo-salida.jpg");
+  background-image: url("../img/fondo-salida.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 25%;
@@ -179,6 +179,14 @@ main {
   #section-output {
     width: 100%;
     height: 400px;
+  }
+
+  #img-muñeco {
+    display: none;
+  }
+
+  #info-muñeco-1 {
+    margin-top: 0px;
   }
 
   #output-text {
